{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 9,
  "lineage": "2cbf1585-648c-2a0d-e0b5-74c520a9dff1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:internet-gateway/igw-03cd670b16abe3f8e",
            "id": "igw-03cd670b16abe3f8e",
            "owner_id": "785169158894",
            "vpc_id": "vpc-0b18f8d445b1c0864"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03cd670b16abe3f8e",
            "id": "r-rtb-0bd75219cb3b374441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd75219cb3b37444",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:route-table/rtb-0bd75219cb3b37444",
            "id": "rtb-0bd75219cb3b37444",
            "owner_id": "785169158894",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tlopez-publicroutetable",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "tlopez-publicroutetable",
              "env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b18f8d445b1c0864"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3c01559b2eacb49",
            "route_table_id": "rtb-0bd75219cb3b37444",
            "subnet_id": "subnet-08ef9bbe3db118d6e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pubsub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08250691fb2f36030",
            "route_table_id": "rtb-0bd75219cb3b37444",
            "subnet_id": "subnet-02ad879ebfaf9ad32"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pubsub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-08ef9bbe3db118d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ef9bbe3db118d6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tlopez-pubsub1",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "tlopez-pubsub1",
              "env": "Dev"
            },
            "vpc_id": "vpc-0b18f8d445b1c0864"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-02ad879ebfaf9ad32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ad879ebfaf9ad32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tlopez-pubsub2",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "tlopez-pubsub2",
              "env": "Dev"
            },
            "vpc_id": "vpc-0b18f8d445b1c0864"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:vpc/vpc-0b18f8d445b1c0864",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09861782712caa9b5",
            "default_route_table_id": "rtb-07e87243dd7635794",
            "default_security_group_id": "sg-0f96476cb9cc14da4",
            "dhcp_options_id": "dopt-0c0c93d52d87e640e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b18f8d445b1c0864",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e87243dd7635794",
            "owner_id": "785169158894",
            "tags": {
              "Name": "tlopez-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "tlopez-vpc",
              "env": "Dev"
            }
          }
        }
      ]
    }
  ]
}